[package]
name = "docker-utils"
version = "0.1.0"
authors = ["Алексей Осадчук <aleksey.osadchuk@playrix.com>"]
edition = "2018"

[[bin]]
name = "docu"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
dockworker = "0.0.23"
pretty-bytes = "*"
clap = "*"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
chrono = "0.4.6"
